--- a/authors.html
+++ b/authors.html
@@ -42,7 +42,7 @@
             <div class="fxs_flexbox_justify_between_wrap">
                 <input type="checkbox" class="fxs_hideElements" id="chip-1" />
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-1">
-                    <address class="fxs_contributorBox fxs_contributorBox_small fxs_flexbox">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small fxs_flexbox">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -64,7 +64,7 @@
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-2" />
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-2">
-                    <address class="fxs_contributorBox fxs_contributorBox_small">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -86,7 +86,7 @@
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-3" />
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-3">
-                    <address class="fxs_contributorBox fxs_contributorBox_small">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small ">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -108,7 +108,7 @@
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-4" />
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-4">
-                    <address class="fxs_contributorBox fxs_contributorBox_small">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -130,7 +130,7 @@
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-5" />
                 <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-5">
-                    <address class="fxs_contributorBox fxs_contributorBox_small">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -152,7 +152,7 @@
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-6" />
                 <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-6">
-                    <address class="fxs_contributorBox fxs_contributorBox_small">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -174,7 +174,7 @@
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-7" />
                 <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-7">
-                    <address class="fxs_contributorBox fxs_contributorBox_small">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -196,7 +196,7 @@
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-8" />
                 <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-8">
-                    <address class="fxs_contributorBox fxs_contributorBox_small">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -218,7 +218,7 @@
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-9" />
                 <label class="fxs_chip-checkbox fxs_hidden_xs" for="chip-9">
-                    <address class="fxs_contributorBox fxs_contributorBox_small">
+                    <address class="fxs_flexbox fxs_contributorBox fxs_contributorBox_small">
                         <div class="fxs_avatar_circleImage_m">
                             <span>
                                 <img class=" lazyloaded"
@@ -238,7 +238,7 @@
                         </span>
                     </address>
                 </label>
-                <label></label>
+                <label class="fxs_chip-checkbox fxs_hidden_680_flex fxs_visible_920_flex fxs_chip-reset"></label>
                 <div class="fxs_visible_ss fxs_col_100" id="showmore">
                     <hr />
                     <script>
@@ -271,7 +271,7 @@
                 </a>
             </p>
             <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_back" href="index.html">
+                <a class="fxs_mutedLink  fxs_txt_underline" href="index.html">
                     <span class="far fa-angle-double-left fxs_hidden_768_iBlock" aria-hidden="true"> </span>
                     Keep reading the news
                 </a>
