--- a/getAppDesktop.html
+++ b/getAppDesktop.html
@@ -44,7 +44,7 @@
                     selected economic events.</strong>
             </p>
             <div class="fxs_marginBase_bottom"></div>
-            <p>
+            <p class="fxs_txt_size_small fxs_txt_weight_700 fxs_txt_light_1_clr">
                 <input type="checkbox" id="terms" /> Send a link to my device to
                 download FXS Mobile App.
             </p>
