--- a/getAppMobile.html
+++ b/getAppMobile.html
@@ -50,8 +50,10 @@
                 </a>
             </p>
             <p class="fxs_right-mobile-center">
-                <a class="fxs_mutedLink fxs_back" href="index.html">
+                <a class="fxs_mutedLink  fxs_txt_underline" href="index.html">
                     Keep reading the news
+                    <span class="far fa-angle-double-right fxs_hidden_768_iBlock" aria-hidden="true"> </span>
+
                 </a>
             </p>
         </div>
