--- a/getPremium.html
+++ b/getPremium.html
@@ -44,6 +44,7 @@
                 <strong>Boost your trading skills and take advantage of Premium FXS
                     Resources.</strong>
             </p>
+            <div class="fxs_clearfix fxs_marginBase_bottom"></div>
             <div class="fxs_flexbox_direction_column_items_center">
                 <ol class="fxs_list_unstyled">
                     <li>
@@ -91,7 +92,7 @@
             </p>
             <div class="fxs_row" id="pricingTable">
                 <div class="fxs_col fxs_col_33">
-                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_marginHalf_bottom fxs_hidden_s">
+                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_marginHalf_bottom fxs_hidden_680">
                         <strong>
                             &nbsp;
                         </strong>
@@ -157,7 +158,7 @@
                 </a>
             </p>
             <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_back" href="index.html">
+                <a class="fxs_mutedLink  fxs_txt_underline" href="index.html">
                     <span class="fas fa-angle-double-left fxs_hidden_768_iBlock"></span>
                     Keep reading the news
                 </a>
