--- a/newsletter.html
+++ b/newsletter.html
@@ -27,10 +27,7 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html"><i class="fxs_flexbox_justify_center_items_center  fas fa-chevron-circle-left" aria-hidden="true"></i>
-                <span>Back</span>
-            </a>
-            <a href="index.html" class="fxs_logo"></a>
+            <a class="fxs_btn fxs_back" href="index.html" data-gtmid="landing-simpleHeader-home"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i><span>Return</span></a>            <a href="index.html" class="fxs_logo"></a>
         </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
@@ -44,57 +41,57 @@
             <div class="fxs_flexbox_justify_between_wrap">
                 <input type="checkbox" class="fxs_hideElements" id="chip-1">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-1">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-euro-sign" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-euro-sign fa-fw" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">European Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-2">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-2">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-dollar-sign" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-dollar-sign fa-fw" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">American Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-3">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-3">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-yen-sign" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-yen-sign fa-fw" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Asian Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-4">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-4">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-chart-line" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-chart-line fa-fw" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">The Week Ahead</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-5">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-5">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-bell" aria-hidden="true"></span>
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-bell fa-fw"  aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Special Alerts</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-6">
-                <label class="fxs_chip-checkbox  fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-6">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-calendar-check" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_flexbox_justify_start " for="chip-6">
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-calendar-check fa-fw" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Economic Calendar</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-7">
-                <label class="fxs_chip-checkbox  fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-7">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-binoculars" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox  fxs_hidden_768_flex fxs_flexbox_justify_start " for="chip-7">
+                    <span class="fxs_flexbox_justify_center_items_center  fas fa-binoculars fa-fw"  aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Currencies Forecast</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-8">
-                <label class="fxs_chip-checkbox fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-8">
-                    <span class="fxs_flexbox_justify_center_items_center fas fa-lightbulb-on" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_hidden_768_flex fxs_flexbox_justify_start " for="chip-8">
+                    <span class="fxs_flexbox_justify_center_items_center fas fa-lightbulb-on fa-fw" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Trading Ideas</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-9">
-                <label class="fxs_chip-checkbox fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-9">
-                    <span class="fxs_flexbox_justify_center_items_center fas fa-user-check" aria-hidden="true"></span>
+                <label class="fxs_chip-checkbox fxs_hidden_768_flex fxs_flexbox_justify_start " for="chip-9">
+                    <span class="fxs_flexbox_justify_center_items_center fas fa-user-check fa-fw" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Subscribe All</span>
                 </label>
-                <label></label>
+                <label class="fxs_chip-checkbox fxs_hidden_768_flex fxs_chip-reset"></label>
             </div>
             <div class="fxs_visible_ss fxs_col_100" id="showmore">
                 <hr />
                 <script>
                     function showAllAuthors() {
-                        document.querySelectorAll(".fxs_chip-checkbox.fxs_hidden_xs").forEach(element => {
-                            element.classList.remove("fxs_hidden_xs");
+                        document.querySelectorAll(".fxs_chip-checkbox.fxs_hidden_768_flex").forEach(element => {
+                            element.classList.remove("fxs_hidden_768_flex");
                         });
                         document
                             .querySelector("#showmore")
@@ -107,7 +104,7 @@
                             <span>
                                 SHOW MORE NEWSLETTERS
                             </span>
-                            <span class="fxs_flexbox_justify_center_items_center  fas fa-angle-down"> </span>
+                            <span class="fxs_flexbox_justify_center_items_center  fas fa-angle-down fa-fw"> </span>
                         </strong>
                     </button>
                 </p>
@@ -120,7 +117,7 @@
                 </a>
             </p>
             <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_back" href="index.html">
+                <a class="fxs_mutedLink  fxs_txt_underline" href="index.html">
                     <span class="far fa-angle-double-left fxs_hidden_768_iBlock" aria-hidden="true"></span>
                     Keep reading the news
                 </a>
