--- a/form.html
+++ b/form.html
@@ -43,11 +43,11 @@
             </p>
             <div class="fxs_clearfix fxs_marginBase"></div>
             <div class="fxs_formGroup">
-                <label class="fxs_txt_size_small">YOUR NAME</label>
+                <label class="fxs_txt_size_small  fxs_txt_weight_500">YOUR NAME</label>
                 <input type="text" class="fxs_textInput" placeholder="Write your name">
             </div>
             <div class="fxs_formGroup">
-                <label class="fxs_txt_size_small">COUNTRY</label>
+                <label class="fxs_txt_size_small  fxs_txt_weight_500">COUNTRY</label>
                 <select class="fxs_select" placeholder="Select your country">
                     <option value="">Select your Country</option>
                     <option value="+93" countrycode="AF">Afghanistan</option>
@@ -299,7 +299,7 @@
             </div>
 
             <div class="fxs_formGroup">
-                <label class="fxs_txt_size_small">PHONE NUMBER</label>
+                <label class="fxs_txt_size_small  fxs_txt_weight_500">PHONE NUMBER</label>
                 <input type="tel" class="fxs_textInput error" placeholder="+XX XXXXXXXXXXXXXX">
             </div>
 
@@ -315,7 +315,7 @@
                 </a>
             </p>
             <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_back" href="index.html">
+                <a class="fxs_mutedLink  fxs_txt_underline" href="index.html">
                     <span class="fas fa-angle-double-left fxs_hidden_768_iBlock"></span> Keep reading the news
                 </a>
             </p>
