--- a/form.html
+++ b/form.html
@@ -315,7 +315,7 @@
                 </a>
             </p>
             <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_back" href="index.html">
+                <a class="fxs_mutedLink  fxs_back fxs_txt_normal" href="index.html">
                     <span class="fas fa-angle-double-left fxs_hidden_768_iBlock"></span> Keep reading the news
                 </a>
             </p>
