--- a/getPremium.html
+++ b/getPremium.html
@@ -27,7 +27,7 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
+            <a class="fxs_btn fxs_back  fxs_txt_normal" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
                 <span>Back</span>
             </a>
             <a href="index.html" class="fxs_logo"></a>
@@ -158,7 +158,7 @@
                 </a>
             </p>
             <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_txt_underline" href="index.html">
+                <a class="fxs_mutedLink  fxs_txt_underline fxs_txt_normal " href="index.html">
                     <span class="fas fa-angle-double-left fxs_hidden_768_iBlock"></span>
                     Keep reading the news
                 </a>
