--- a/authors.html
+++ b/authors.html
@@ -25,7 +25,7 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html">
+            <a class="fxs_btn fxs_back  fxs_txt_normal" href="index.html">
                 <i class="fas fa-chevron-circle-left" aria-hidden="true"> </i>
                 <span>Back</span>
             </a>
@@ -238,7 +238,8 @@
                         </span>
                     </address>
                 </label>
-                <label class="fxs_chip-checkbox fxs_hidden_680_flex fxs_visible_920_flex fxs_chip-reset"></label>
+                <label class="fxs_chip-checkbox fxs_visible_920_flex fxs_chip-reset"></label>
+                <div class="fxs_clearfix fxs_marginBase_bottom fxs_visible_680"></div>
                 <div class="fxs_visible_ss fxs_col_100" id="showmore">
                     <hr />
                     <script>
@@ -271,7 +272,7 @@
                 </a>
             </p>
             <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_txt_underline" href="index.html">
+                <a class="fxs_mutedLink fxs_txt_underline fxs_txt_normal" href="index.html">
                     <span class="far fa-angle-double-left fxs_hidden_768_iBlock" aria-hidden="true"> </span>
                     Keep reading the news
                 </a>
