--- a/getAppDesktop.html
+++ b/getAppDesktop.html
@@ -27,7 +27,7 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
+            <a class="fxs_btn fxs_back  fxs_txt_normal" href="index.html"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i>
                 <span>Back</span>
             </a>
             <a href="index.html" class="fxs_logo"></a>
