--- a/newsletter.html
+++ b/newsletter.html
@@ -27,7 +27,7 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html" data-gtmid="landing-simpleHeader-home"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i><span>Return</span></a>            <a href="index.html" class="fxs_logo"></a>
+            <a class="fxs_btn fxs_back  fxs_txt_normal" href="index.html" data-gtmid="landing-simpleHeader-home"><i class="fas fa-chevron-circle-left" aria-hidden="true"></i><span>Return</span></a>            <a href="index.html" class="fxs_logo"></a>
         </div>
     </header>
     <div class="fxs_flexbox_justify_around_items_start">
@@ -117,7 +117,7 @@
                 </a>
             </p>
             <p class="fxs_left-mobile-center">
-                <a class="fxs_mutedLink  fxs_txt_underline" href="index.html">
+                <a class="fxs_mutedLink fxs_txt_underline fxs_txt_normal" href="index.html">
                     <span class="far fa-angle-double-left fxs_hidden_768_iBlock" aria-hidden="true"></span>
                     Keep reading the news
                 </a>
