--- a/authors.html
+++ b/authors.html
@@ -238,9 +238,9 @@
                         </span>
                     </address>
                 </label>
-                <label class="fxs_chip-checkbox fxs_visible_920_flex fxs_chip-reset"></label>
+                <label class="fxs_chip-checkbox fxs_visible_620_flex fxs_chip-reset"></label>
                 <div class="fxs_clearfix fxs_marginBase_bottom fxs_visible_680"></div>
-                <div class="fxs_visible_ss fxs_col_100" id="showmore">
+                <div class="fxs_visible_768 fxs_col_100" id="showmore">
                     <hr />
                     <script>
                         function showAllAuthors() {
