--- a/newsletter.html
+++ b/newsletter.html
@@ -60,12 +60,12 @@
                     <span class="fxs_newsletter-name">The Week Ahead</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-5">
-                <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-5">
+                <label class="fxs_chip-checkbox  fxs_hidden_768_flex  fxs_flexbox_justify_start" for="chip-5">
                     <span class="fxs_flexbox_justify_center_items_center  fas fa-bell fa-fw"  aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Special Alerts</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-6">
-                <label class="fxs_chip-checkbox fxs_flexbox_justify_start " for="chip-6">
+                <label class="fxs_chip-checkbox  fxs_hidden_768_flex  fxs_flexbox_justify_start " for="chip-6">
                     <span class="fxs_flexbox_justify_center_items_center  fas fa-calendar-check fa-fw" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Economic Calendar</span>
                 </label>
@@ -86,7 +86,7 @@
                 </label>
                 <label class="fxs_chip-checkbox fxs_hidden_768_flex fxs_chip-reset"></label>
             </div>
-            <div class="fxs_visible_ss fxs_col_100" id="showmore">
+            <div class="fxs_visible_768 fxs_col_100" id="showmore">
                 <hr />
                 <script>
                     function showAllAuthors() {
