--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="https://staticcontent.fxstreet.com/website/static-html/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i&amp;display=swap"
         rel="stylesheet">
-    <link href="https://staticcontentqa.azureedge.net/website/css/fxs_screen.css" rel="stylesheet">
+    <link href="https://staticcontentqa.azureedge.net/website/css/fxs_screen.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/22a9d93fa2.js"></script>
     <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/latest/css/pro.min.css" media="all">
     <title>
@@ -21,7 +21,7 @@
     <meta name="description"
         content="FXStreet is a leading source for reliable news and real time Forex analysis. FXStreet offers real-time exchange rates, charts and an economic calendar.">
     <meta name="keywords" content="forex, trading, fx, trade, news, reports, analysis">
-    <link rel="stylesheet" href="boarding.css">
+    
 </head>
 
 <body cz-shortcut-listen="true">
