--- a/form.html
+++ b/form.html
@@ -316,7 +316,8 @@
             </p>
             <p class="fxs_left-mobile-center">
                 <a class="fxs_mutedLink  fxs_back fxs_txt_normal" href="index.html">
-                    <span class="fas fa-angle-double-left fxs_hidden_768_iBlock"></span> Keep reading the news
+                    <span class="far fa-angle-double-left fxs_hidden_768_iBlock" aria-hidden="true"></span>
+                    Keep reading the news
                 </a>
             </p>
         </div>
