--- a/getPremium.html
+++ b/getPremium.html
@@ -91,7 +91,7 @@
             </p>
             <div class="fxs_row" id="pricingTable">
                 <div class="fxs_col fxs_col_33">
-                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_marginHalf_bottom fxs_hidden_s">
+                    <p class="fxs_entryPlain_text fxs_txt_highlight fxs_marginHalf_bottom fxs_hidden_xs">
                         <strong>
                             &nbsp;
                         </strong>
