--- a/authors.html
+++ b/authors.html
@@ -238,7 +238,8 @@
                         </span>
                     </address>
                 </label>
-                <label></label>
+                <label class="fxs_chip-checkbox fxs_chip-reset fxs_hidden_xs_flex fxs_visible_920">
+                </label>
                 <div class="fxs_visible_ss fxs_col_100" id="showmore">
                     <hr />
                     <script>
