--- a/newsletter.html
+++ b/newsletter.html
@@ -27,7 +27,7 @@
 <body cz-shortcut-listen="true">
     <header class="fxs_simpleHeader">
         <div class="fxs_container">
-            <a class="fxs_btn fxs_back" href="index.html"><i class="fxs_flexbox_justify_center_items_center  fas fa-chevron-circle-left" aria-hidden="true"></i>
+            <a class="fxs_btn fxs_back" href="index.html"><i class="fxs_txt_center fas fa-chevron-circle-left" aria-hidden="true"></i>
                 <span>Back</span>
             </a>
             <a href="index.html" class="fxs_logo"></a>
@@ -44,50 +44,51 @@
             <div class="fxs_flexbox_justify_between_wrap">
                 <input type="checkbox" class="fxs_hideElements" id="chip-1">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-1">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-euro-sign" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-euro-sign" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">European Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-2">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-2">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-dollar-sign" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-dollar-sign" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">American Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-3">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-3">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-yen-sign" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-yen-sign" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Asian Session</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-4">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-4">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-chart-line" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-chart-line" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">The Week Ahead</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-5">
                 <label class="fxs_chip-checkbox fxs_flexbox_justify_start" for="chip-5">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-bell" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-bell" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Special Alerts</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-6">
                 <label class="fxs_chip-checkbox  fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-6">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-calendar-check" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-calendar-check" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Economic Calendar</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-7">
                 <label class="fxs_chip-checkbox  fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-7">
-                    <span class="fxs_flexbox_justify_center_items_center  fas fa-binoculars" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-binoculars" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Currencies Forecast</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-8">
                 <label class="fxs_chip-checkbox fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-8">
-                    <span class="fxs_flexbox_justify_center_items_center fas fa-lightbulb-on" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-lightbulb-on" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Trading Ideas</span>
                 </label>
                 <input type="checkbox" class="fxs_hideElements" id="chip-9">
                 <label class="fxs_chip-checkbox fxs_hidden_xs_flex fxs_flexbox_justify_start " for="chip-9">
-                    <span class="fxs_flexbox_justify_center_items_center fas fa-user-check" aria-hidden="true"></span>
+                    <span class="fxs_txt_center fas fa-user-check" aria-hidden="true"></span>
                     <span class="fxs_newsletter-name">Subscribe All</span>
                 </label>
-                <label></label>
+                <label class="fxs_chip-checkbox fxs_chip-reset fxs_hidden_xs_flex fxs_flexbox_justify_start fxs_visible_920">
+                </label>
             </div>
             <div class="fxs_visible_ss fxs_col_100" id="showmore">
                 <hr />
@@ -107,7 +108,7 @@
                             <span>
                                 SHOW MORE NEWSLETTERS
                             </span>
-                            <span class="fxs_flexbox_justify_center_items_center  fas fa-angle-down"> </span>
+                            <span class="fxs_txt_center fas fa-angle-down"> </span>
                         </strong>
                     </button>
                 </p>
